correct SocketClientHandlerTest class to fit with SocketClientHandler class to pass test